Name Controller of each bundle CRUD generation from command line

--- a/app/Resources/translations/layout.en.yml
+++ b/app/Resources/translations/layout.en.yml
@@ -5,6 +5,8 @@ header:
     title: Back to the Home page
 
   navigation:
+    slideShow:
+      label: Slide Show
     news:
       label: News
     work:
