Add flash message system Add flash message on successfull remove

--- a/src/PBlondeau/Bundle/SlideShowBundle/Resources/translations/adminSlideShow.en.yml
+++ b/src/PBlondeau/Bundle/SlideShowBundle/Resources/translations/adminSlideShow.en.yml
@@ -37,3 +37,4 @@ form:
             action:
                 confirm: Remove the Slide
                 cancel: Cancel
+        success: Suppression completed successfully
