--- a/app/Resources/translations/layout.en.yml
+++ b/app/Resources/translations/layout.en.yml
@@ -1,24 +1,33 @@
 header:
-  title: Pascal Blondeau
-  baseline: Artist Photographer
-  backToHome:
-    title: Back to the Home page
+    title: Pascal Blondeau
+    baseline: Artist Photographer
+    backToHome:
+        title: Back to the Home page
 
-  navigation:
-    slideShow:
-      label: Slide Show
-    news:
-      label: News
-    work:
-      label: Work
-    exhibitions:
-      label: Exhibitions
-    press:
-      label: Press
-    biography:
-      label: Biography
-    contact:
-      label: Contact
+    navigation:
+        slideShow:
+            label: Slide Show
+        news:
+            label: News
+        work:
+            label: Work
+        exhibitions:
+            label: Exhibitions
+        press:
+            label: Press
+        biography:
+            label: Biography
+        contact:
+            label: Contact
+
+aside:
+    link:
+        slideShow:
+            label: Slide Show
+
+        logout:
+            label: Log-out
+
 
 footer:
-  creationBy: Developed by
+    creationBy: Developed by
