--- a/app/Resources/translations/layout.en.yml
+++ b/app/Resources/translations/layout.en.yml
@@ -24,7 +24,16 @@ aside:
     link:
         slideShow:
             label: Slide Show
-
+        news:
+            label: News
+        work:
+            label: Work
+        exhibition:
+            label: Exhibitions
+        press:
+            label: Press
+        biography:
+            label: Biography
         logout:
             label: Log-out
 
