Working on save with ajax

--- a/src/PBlondeau/Bundle/SlideShowBundle/Resources/translations/adminSlideShow.en.yml
+++ b/src/PBlondeau/Bundle/SlideShowBundle/Resources/translations/adminSlideShow.en.yml
@@ -7,6 +7,7 @@ list:
         empty: No Slide added yet
         header:
             image: Image
+            position: Position
             status: Status
             creation: Added
             actions: Actions
