--- a/src/PBlondeau/Bundle/SlideShowBundle/Resources/translations/adminSlideShow.en.yml
+++ b/src/PBlondeau/Bundle/SlideShowBundle/Resources/translations/adminSlideShow.en.yml
@@ -24,8 +24,10 @@ form:
     modal:
         add:
             title: Add a new Slide
+            success.message: A new Slide has been successfully added
         edit:
             title: Edit Slide
+            success.message: The Slide has been successfully modified
         action:
             save: Save the Slide
             cancel: Cancel
