Sort Slide from admin list

--- a/src/PBlondeau/Bundle/SlideShowBundle/Resources/translations/adminSlideShow.en.yml
+++ b/src/PBlondeau/Bundle/SlideShowBundle/Resources/translations/adminSlideShow.en.yml
@@ -43,3 +43,6 @@ form:
                 confirm: Remove the Slide
                 cancel: Cancel
         success.message: The Slide has been successfully removed
+
+    updatePosition:
+        message: Positions have been successfully updated
