Handle CRUD for Album in admin

--- a/src/PBlondeau/Bundle/WorkBundle/Resources/translations/adminWorkAlbum.en.yml
+++ b/src/PBlondeau/Bundle/WorkBundle/Resources/translations/adminWorkAlbum.en.yml
@@ -1,12 +1,12 @@
 list:
     action:
-        add: Add a new News
+        add: Add a new Album
 
-    news:
-        count: %numberOfNews% News
-        empty: No News added yet
+    album:
+        count: %numberOfAlbums% Albums
+        empty: No Album added yet
         header:
-            image: Image
+            cover: Cover
             title: Title
             position: Position
             status: Status
@@ -23,27 +23,27 @@ list:
 
 form:
     create:
-        title: Add a new News
-        success.message: A new News has been successfully added
+        title: Add a new Albums=
+        success.message: A new Album has been successfully added
     update:
-        title: Update News informations
-        success.message: The News has been successfully modified
+        title: Update Album informations
+        success.message: The Album has been successfully modified
     modal:
         action:
-            save: Save the News
+            save: Save the Album
             cancel: Cancel
     delete:
         modal:
-            title: Remove News
+            title: Remove Album
             content: >
-                You are about to delete an News.<br />
+                You are about to delete an Album.<br />
                 Suppression is permanent and you won't be able to recover the data.<br />
                 <br />
                 Are you sure you want to proceed ?
             action:
-                confirm: Remove the News
+                confirm: Remove the Album
                 cancel: Cancel
-        success.message: The News has been successfully removed
+        success.message: The Album has been successfully removed
 
     updatePosition:
         message: Positions have been successfully updated
