Add the number of photo inside an album on admin list

--- a/src/PBlondeau/Bundle/WorkBundle/Resources/translations/adminWorkAlbum.en.yml
+++ b/src/PBlondeau/Bundle/WorkBundle/Resources/translations/adminWorkAlbum.en.yml
@@ -9,6 +9,7 @@ list:
             cover: Cover
             title: Title
             position: Position
+            numberOfPhotos: Photos
             openedCount: Opened
             status: Status
             creation: Added
